# CV-models-from-scratch

./: .gitignore  README.md  hello.py  pyproject.toml
Alexnet/: alexnet.ipynb  evaluate.py  inference.py  train.py
Alexnet/config/: config.yaml
Alexnet/logs/: training_report_20251006_041533.json
Alexnet/src/: __init__.py  data_loader.py  evaluator.py  model.py  trainer.py  visualizer.py
Alexnet/utils/: __init__.py  checkpoint.py  metrics.py
